bindings/lisp/doremir/device/midi.lisp

(in-package :audio-engine)
(define-foreign-type device-midi-session-type () () (:actual-type :pointer))
(define-parse-method device-midi-session () (make-instance 'device-midi-session-type))
(defclass device-midi-session () ((device-midi-session-ptr :initarg :device-midi-session-ptr)))
(defmethod translate-to-foreign (x (type device-midi-session-type)) (slot-value x 'device-midi-session-ptr))
(defmethod translate-from-foreign (x (type device-midi-session-type)) (make-instance 'device-midi-session :device-midi-session-ptr x))
(define-foreign-type device-midi-stream-type () () (:actual-type :pointer))
(define-parse-method device-midi-stream () (make-instance 'device-midi-stream-type))
(defclass device-midi-stream () ((device-midi-stream-ptr :initarg :device-midi-stream-ptr)))
(defmethod translate-to-foreign (x (type device-midi-stream-type)) (slot-value x 'device-midi-stream-ptr))
(defmethod translate-from-foreign (x (type device-midi-stream-type)) (make-instance 'device-midi-stream :device-midi-stream-ptr x))
(defcfun (device-midi-all "doremir_device_midi_all") list (a device-midi-session))
(defcfun (device-midi-default "doremir_device_midi_default") pair (a device-midi-session))
(defcfun (device-midi-name "doremir_device_midi_name") string (a device-midi))
(defcfun (device-midi-host-name "doremir_device_midi_host_name") string (a device-midi))
(defcfun (device-midi-has-input "doremir_device_midi_has_input") :boolean (a device-midi))
(defcfun (device-midi-has-output "doremir_device_midi_has_output") :boolean (a device-midi))
(defcfun (device-midi-begin-session "doremir_device_midi_begin_session") device-midi-session)
(defcfun (device-midi-restart-session "doremir_device_midi_restart_session") device-midi-session (a device-midi-session))
(defcfun (device-midi-end-session "doremir_device_midi_end_session") :void (a device-midi-session))
(defcfun (device-midi-start-stream "doremir_device_midi_start_stream") device-midi-stream (a device-midi))
(defcfun (device-midi-restart-stream "doremir_device_midi_restart_stream") device-midi-stream (a device-midi-stream))
(defcfun (device-midi-stop-stream "doremir_device_midi_stop_stream") :void (a device-midi-stream))
(defctype device-midi-session-callback (:pointer (:pointer :void)))
(defctype device-midi-stream-callback (:pointer (:pointer :void)))
(defcfun (device-midi-with-session "doremir_device_midi_with_session") :void (a device-midi-session-callback))
(defcfun (device-midi-with-stream "doremir_device_midi_with_stream") :void (a device-midi) (b device-midi-stream-callback))